--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,13 +17,26 @@ body {
     display: flex;
     flex-wrap: wrap;
     border: 2px solid yellow;
+    perspective: 1000px;
 }
 
 .memory-card {
     border: 2px solid red;
-    width: calc(25% - 10px);
-    width: calc(33.33% - 10px);
+    width: 25%;
+    height: 33.33%;
     position: relative;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+}
+
+.memory-card:active {
+    transform: scale(.97);
+    transition: transform .2;
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
 }
 
 .front-face,
@@ -34,4 +47,9 @@ body {
     position: absolute;
     border-radius: 5px;
     background-color: #4969f5;
+    backface-visibility: hidden;
+}
+
+.front-face {
+    transform: rotateY(180deg);
 }
